# RusticConfig

./: Cargo.toml  README.md
examples/: Cargo.toml
examples/src/: main.rs
src/: error.rs  file_reader.rs  lib.rs  manager.rs
test/: test.json  test.yaml
