[package]
name = "rustic_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = {version = "6.1.1", optional = true, features = ["serde"]}
oneshot = {version = "0.1.6", optional = true}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = {version = "1.0.108"}
serde_yaml = {version = "0.9.27"}
thiserror = "1.0.50"
# serde = {version = "1", optional = true}

[features]
default = ["all"]
watch = ["notify", "oneshot"]
all = ["watch"]
